// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default tag facet correctly 1`] = `
<span
  className="src-modules-search-components-entity-card-tag-facet__tag-default src-modules-search-components-entity-card-tag-facet__tag"
>
  <div
    id="child"
  />
</span>
`;

exports[`should render an error tag facet correctly 1`] = `
<span
  className="src-modules-search-components-entity-card-tag-facet__tag-error src-modules-search-components-entity-card-tag-facet__tag"
>
  <div
    id="child"
  />
</span>
`;
